调整记录